--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       </div>
     </footer> -->
 
-
+<script type="text/javascript" src="../js/sagiri.min.js"></script>
     <div id="aplayer-fixed" class="aplayer aplayer-fixed aplayer-narrow aplayer-withlist"></div>
   </div>
 
