--- a/index.html
+++ b/index.html
@@ -142,7 +142,10 @@
                     <a href="html/love.html" rel="section" target="_blank">表个白</a>
                   </li>
                   <li class="submenu-item submenu-item-nas">
-                    <a href="html/cctv.html" rel="section" target="_blank">CCTV</a>
+                    <a href="html/cctvhd.html" rel="section" target="_blank">高清电视</a>
+                  </li>
+                  <li class="submenu-item submenu-item-nas">
+                    <a href="html/cctvtc.html" rel="section" target="_blank">标清电视</a>
                   </li>
                   <li class="submenu-item submenu-item-nas">
                     <a href="html/snack.html" rel="section" target="_blank">贪吃蛇</a>
