--- a/html/cctvhd.html
+++ b/html/cctvhd.html
@@ -16,7 +16,7 @@
 
        
         <div class="cctv">
-				<iframe src="http://ivi.bupt.edu.cn/player.html?channel=hunanhd" id="zhengqian" scrolling="yes" height="450px" width="800px"></iframe>
+				<iframe src="//ivi.bupt.edu.cn/player.html?channel=hunanhd" id="zhengqian" scrolling="yes" height="450px" width="800px"></iframe>
         </div>
          <div class="logo">
             <a href="https://zheng-qian.github.io/" target="_blank"><img src="https://zheng-qian.github.io/images/1.gif" width="120px" title="郑乾啊" /></a>
